@@ -29,13 +29,14 @@
 #define ID_RB_ODM_PREVIOUS              15114
 #define ID_RB_ODM_FIXED                 15115
 #define ID_RB_ODM_PARENT_OF_INPUT_FILE  15122
+#define ID_CB_UNIQUE_OUTPUT_FILE_NAME_SUGGESTIONS 15123
 
 class optdlg_output_tab: public optdlg_base_tab {
   DECLARE_CLASS(optdlg_output_tab);
   DECLARE_EVENT_TABLE();
 public:
   wxTextCtrl *tc_output_directory;
-  wxCheckBox *cb_ask_before_overwriting, *cb_autoset_output_filename;
+  wxCheckBox *cb_ask_before_overwriting, *cb_autoset_output_filename, *cb_unique_output_file_name_suggestions;
   wxRadioButton *rb_odm_input_file, *rb_odm_parent_of_input_file, *rb_odm_previous, *rb_odm_fixed;
   wxButton *b_browse_output_directory;
 
